[package]
name = "rshm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.25"
libc = "0.2.131"

[dev-dependencies]
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"

[[example]]
name = "log"
crate-type = ["staticlib"]
test = true

[[example]]
name = "io"
crate-type = ["staticlib"]
test = true
