[package]
name = "rshm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A library to use Linux's shm shared memory facilities in Rust"
repository = "https://github.com/dbregeon/rshm"
keywords = ["shm", "linux", "condvar"]
categories = ["Memory management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.25"
libc = "0.2.131"

[dev-dependencies]
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"

[[example]]
name = "log"
crate-type = ["staticlib"]
test = true

[[example]]
name = "io"
crate-type = ["staticlib"]
test = true

[[example]]
name = "dictionary"
crate-type = ["staticlib"]
test = true