[package]
name = "rshm"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A library to use Linux's shm shared memory facilities in Rust"
repository = "https://github.com/dbregeon/rshm"
keywords = ["shm", "linux", "condvar"]
categories = ["Memory management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version = "0.30", features = ["fs", "mman"]}
libc = "0.2.131"

[dev-dependencies]
rand = "0.9"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"

[[example]]
name = "log"
crate-type = ["staticlib"]
test = true

[[example]]
name = "io"
crate-type = ["staticlib"]
test = true

[[example]]
name = "dictionary"
crate-type = ["staticlib"]
test = true